# logos-container

./: CMakeLists.txt  README.md  flake.nix
.github/workflows/: ci.yml
nix/: build.nix  default.nix  include.nix  tests.nix
src/: CMakeLists.txt
src/logos_container/: container_factory.h  module_container.h  module_descriptor.h
tests/: CMakeLists.txt  test_contract.cpp
